--- a/catalog/templates/catalog/product_add.html
+++ b/catalog/templates/catalog/product_add.html
@@ -278,11 +278,11 @@
                         <div class="grid md:grid-cols-2 gap-4">
                             <div>
                                 <label for="manual_width_mm" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{% trans "Ширина (мм)" %}</label>
-                                <input type="number" step="0.1" id="manual_width_mm" name="manual_width_mm" class="bg-gray-50 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 text-gray-900 dark:text-white text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5" placeholder="{% trans \"Введите ширину\" %}">
+                                <input type="number" step="0.1" id="manual_width_mm" name="manual_width_mm" class="bg-gray-50 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 text-gray-900 dark:text-white text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5" placeholder='{% trans "Введите ширину" %}'>
                             </div>
                             <div>
                                 <label for="manual_height_mm" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{% trans "Высота (мм)" %}</label>
-                                <input type="number" step="0.1" id="manual_height_mm" name="manual_height_mm" class="bg-gray-50 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 text-gray-900 dark:text-white text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5" placeholder="{% trans \"Введите высоту\" %}">
+                                <input type="number" step="0.1" id="manual_height_mm" name="manual_height_mm" class="bg-gray-50 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 text-gray-900 dark:text-white text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5" placeholder='{% trans "Введите высоту" %}'>
                             </div>
                         </div>
                         <p class="mt-2 text-sm text-gray-500 dark:text-gray-400">
